--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 				  <br />
 				  you're a
 				  <br />
-				  mom
+				   mom
 				</div>
 	  	</div>
 	  	<div class="col-4 slogan">
@@ -32,6 +32,22 @@
   	<hr />
   	
   	<br class="clear" />
-    <%= yield %>
+  	<div class="container">
+  		<%= yield %>
+  	</div>
+  	<div class="footer">
+      <div class="container">
+		    <div class="row">
+		      <div class="col-6">
+      	<%=link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+    </div>
+      <div class="col-6 footer-blurb">
+      	Proudly built by Kirstan Fitzpatrick
+      </div>
+	    </div>
+    </div>
+  </div>
+
+    
   </body>
 </html>
