--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <title>Splurty</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -26,10 +25,41 @@
 	  		Splurting out unsolicited advice about being a mom since 2017
 	  	</div>
 	  	<div class="col-5 links">
-	  		<%= link_to 'Contribute', new_quote_path %>
+	  		<!-- Button trigger modal -->
+        <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        <%= link_to 'About', about_path %>
+      </div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+         <h5 class="modal-title" id="exampleModalLabel">Contribute Your Quote</h5>
+      </div>
+      <%= simple_form_for Quote.new do |f| %>
+        <div class="modal-body">
+          <%= f.input :saying %>
+          <%= f.input :author %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit 'Create', class: 'btn btn-danger' %>
+      <% end %>
+          
+        
+      </div>
+    </div>
+  </div>
+</div>
 	  		<%= link_to 'About', about_path %>
 	  	</div>
   	</header>
+    
+
 
   	<hr />
   	
