--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,17 @@
 				   mom
 				</div>
         <% end %>
-	  	</div>
-	  	<div class="col-4 slogan">
+        	  	</div>
+	  	<div class="col col-sm-4 hidden-xs-down slogan">
 	  		Splurting out unsolicited advice about being a mom since 2017
 	  	</div>
-	  	<div class="col-5 links">
+	  	<div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
 	  		<!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        &nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
+      </header>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -42,8 +44,9 @@
       </div>
       <%= simple_form_for Quote.new do |f| %>
         <div class="modal-body">
-          <%= f.input :saying %>
-          <%= f.input :author %>
+          <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "Fear is the disease. Hustle is the antidote." %>
+          <br />
+          <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Travis Kalanick" %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -55,10 +58,6 @@
     </div>
   </div>
 </div>
-	  		<%= link_to 'About', about_path %>
-	  	</div>
-  	</header>
-    
 
 
   	<hr />
@@ -75,10 +74,10 @@
   	<div class="footer">
       <div class="container">
 		    <div class="row">
-		      <div class="col-6">
+		      <div class="col-12 col-sm-6">
       	<%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
     </div>
-      <div class="col-6 footer-blurb">
+      <div class="col-12 col-sm-6 footer-blurb">
       	Proudly built by Kirstan Fitzpatrick
       </div>
 	    </div>
